...
            text: $viewModel.query,
            placement: .alwaysVisible, prompt: "Search"
        )
        .safeAreaInset(edge: .top) {
            Picker("Type", selection: $viewModel.mediaType) {
                Text("Movies").tag(MediaType.movie)
                Text("Series").tag(MediaType.tv)
            }
            .pickerStyle(.segmented)
            .padding(.horizontal)
            .padding(.bottom, 8)
            .barBackground()
        }
...
